# u2

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml
api/access/: Cargo.toml
api/access/res/assets/migrations/: 00000_init.down.surql  00000_init.up.surql
api/access/res/query/middleware/auth/: by_credentials.surql  by_token.surql
api/access/res/query/middleware/token/: create.surql  delete.surql  delete_expired.surql  update.surql
api/access/res/query/permissions/: map.surql
api/access/src/: main.rs  router.rs  state.rs
api/access/src/amqp/: broadcast.rs  mod.rs
api/access/src/app/: config.rs  router.rs  state.rs
api/access/src/controller/auth/: authorize.rs  mod.rs  revoke.rs  token.rs  util.rs
api/access/src/middleware/: auth.rs  claims.rs  jwt_keys.rs  mod.rs
api/access/src/model/: mod.rs  permissions.rs
api/access/src/repository/: auth.rs  mod.rs  permissions.rs  token.rs
api/access/src/service/: amqp.rs
api/audit/: Cargo.toml
api/audit/res/assets/migrations/: 00000_init.down.surql  00000_init.up.surql
api/audit/src/: main.rs
api/audit/src/amqp/: entity.rs  mod.rs
api/audit/src/app/: config.rs  mod.rs  router.rs  state.rs
api/audit/src/service/: amqp.rs
api/auth/: Cargo.toml
api/auth/res/assets/migrations/: 00000_init.up.surql
api/auth/src/: main.rs  router.rs  state.rs
api/auth/src/app/: mod.rs  router.rs  state.rs
api/logger/: Cargo.toml
api/logger/src/: main.rs  pool.rs
api/logger/src/app/: amqp.rs  mod.rs  pool.rs
api/logger/src/services/: amqp.rs  mod.rs  pool.rs
api/proxy/: Cargo.toml
api/proxy/src/: main.rs
api/proxy/src/app/: mod.rs  router.rs
api/system/: Cargo.toml
api/system/res/migration/: 00000_init.down.surql  00000_init.up.surql
api/system/res/query/service/: init.surql
api/system/src/: main.rs
api/system/src/amqp/: broadcast.rs  mod.rs
api/system/src/app/: mod.rs  state.rs
api/system/src/repository/: migration.rs  mod.rs
api/system/src/service/: amqp.rs  mod.rs
cfg/caddy/: Caddyfile
cfg/grafana/: grafana.ini
cfg/grafana/dashboards/: prometheus-overview.json  rabbitmq-overview.json  rabbitmq-raft.json
cfg/grafana/provisioning/datasources/: datasource.yml
cfg/prometheus/: prometheus.yml
lib/api-util/: Cargo.toml
lib/api-util/res/query/: get_current_migration.surql  set_current_migration.surql
lib/api-util/src/: lib.rs
lib/api-util/src/amqp/: channel.rs  delivery_ext.rs  message.rs  mod.rs  pool.rs  pool_ext.rs
lib/api-util/src/error/: auth.rs  error.rs  global.rs  mod.rs  panic.rs
lib/api-util/src/handler/: healthcheck.rs  mod.rs
lib/api-util/src/macros/: amqp.rs  database.rs  mod.rs
lib/api-util/src/model/: capabilities.rs  metadata.rs  mod.rs  permissions.rs
lib/api-util/src/util/: amqp.rs  console.rs  env.rs  log.rs  logger.rs  migrate.rs  mod.rs  prometheus.rs  server.rs  shutdown.rs
res/logo/: banner.txt
