[workspace]
resolver = "3"
members = [
    "libraries/permissions",
    "libraries/prometheus-metrics",
    "backend/access",
    "backend/auth"
]
default-members = ["backend/access"]

[workspace.package]
edition = "2024"
version = "0.0.1"
description = "Rust CMS with WASM UI and OpenApi documentation"
keywords = ["Rust", "CMS", "OpenApi", "WASM"]
authors = ["Anatolii Shliakhto <a.shlyakhto@gmail.com>"]
repository = "https://github.com/AnatoliiShliakhto/rustcms"
readme = "README.md"
license = "MIT"

[profile.dev]
opt-level = 2

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
