[workspace]
resolver = "3"
members = [
    "lib/api-util",
    "api/access",
    "api/auth",
    "api/logger"
, "api/system", "api/audit"]
default-members = ["api/access"]

[workspace.package]
edition = "2024"
version = "0.0.1"
description = "Military unit management system v2.0"
keywords = ["Rust", "CMS", "microservices", "WASM", "application"]
authors = ["Anatolii Shliakhto <a.shlyakhto@gmail.com>"]
repository = "https://github.com/AnatoliiShliakhto/u2"
readme = "README.md"
license = "MIT"

[profile.dev]
opt-level = 2

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
