[package]
name = "auth"
description = "Authorization service"
edition.workspace = true
version.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
prometheus-metrics = { path = "../../lib/prometheus-metrics" }

thiserror = { version = "2.0.12" }
tokio = { version = "1.45.0", features = ["full"] }
dotenv = { version = "0.15.0" }

axum = { version = "0.8.4", features = ["tokio", "http2"] }
axum-server = { version = "0.7.2", features = ["tokio-rustls", "rustls-pemfile", "tls-rustls"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }