[package]
name = "auth"
version = "0.0.1"
description = "Authorization service"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
api-util = { path = "../../lib/api-util" }

axum = { version = "0.8.4", features = ["tokio"] }
surrealdb = { version = "2.3.4" }
tokio = { version = "1.45.1", features = ["full"] }