[package]
name = "logger"
version = "0.0.1"
description = "Logger service"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
api-util = { path = "../../lib/api-util" }

tokio = { version = "1.45.0", features = ["full"] }
axum = { version = "0.8.4", features = ["tokio"] }