[package]
name = "system"
description = "System coroutine service"
version = "0.0.1"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
api-util = { path = "../../lib/api-util" }

surrealdb = { version = "2.3.4" }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
