[package]
name = "api-util"
version = "0.0.1"
description = "Api utilities library"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
axum = {  version = "0.8.4" }
axum-server = { version = "0.7.2" }
metrics-exporter-prometheus = { version = "0.17.0" }
tokio = { version = "1.45.0", features = ["signal"] }
metrics = { version = "0.24.2" }
bitflags = { version = "2.9.0" }
base64 = { version = "0.22.1" }