[package]
name = "api-util"
version = "0.0.1"
description = "Api utilities library"
edition.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = { version = "0.2.3" }
axum = { version = "0.8.4" }
axum-server = { version = "0.7.2" }
metrics-exporter-prometheus = { version = "0.17.2" }
tokio = { version = "1.45.1", features = ["signal"] }
metrics = { version = "0.24.2" }
bitflags = { version = "2.9.1" }
base64 = { version = "0.22.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
thiserror = { version = "2.0.12" }
deadpool-lapin = { version = "0.12.1", features = ["serde"] }
surrealdb = { version = "2.3.5", default-features = false, features = ["protocol-ws"] }
chrono = { version = "0.4.41" }